--- a/Liquid-main/layout/password.liquid
+++ b/Liquid-main/layout/password.liquid
@@ -1,6 +1,9 @@
 <!doctype html>
+{% # Password page layout: storefront behind password; header, main, footer sections. %}
 <html class="no-js full-height" lang="{{ request.locale.iso_code }}">
   <head>
+    {% # region head %}
+    {% # region head meta and title %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -20,9 +23,11 @@
     <meta name="description" content="{{ page_description | escape }}">
 
     {% render 'meta-tags' %}
+    {% # endregion head meta and title %}
 
     {{ content_for_header }}
 
+    {% # Font and color-scheme CSS variables from theme settings. %}
     {%- liquid
       assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
       assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
@@ -173,6 +178,7 @@
         --variant-pills-shadow-blur-radius: {{ settings.variant_pills_shadow_blur }}px;
       }
     {% endstyle %}
+    {% # endregion theme CSS variables %}
 
     {%- unless settings.type_body_font.system? -%}
       <link rel="preload" as="font" href="{{ settings.type_body_font | font_url }}" type="font/woff2" crossorigin>
@@ -184,7 +190,9 @@
     {{ 'section-password.css' | asset_url | stylesheet_tag }}
     {{ 'base.css' | asset_url | stylesheet_tag }}
     {{ 'component-list-social.css' | asset_url | stylesheet_tag }}
+    {% # endregion head %}
 
+    {% # no-js class swap; theme scripts for password page. %}
     <script>
       document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
     </script>
@@ -193,6 +201,7 @@
     <script src="{{ 'password-modal.js' | asset_url }}" defer="defer"></script>
   </head>
 
+  {% # region body: skip link, password header, main content, footer. %}
   <body class="password gradient">
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
@@ -206,6 +215,8 @@
     <footer>
       {% section 'main-password-footer' %}
     </footer>
+    {% # endregion body %}
+
     <ul hidden>
       <li id="a11y-new-window-message">{{ 'accessibility.link_messages.new_window' | t }}</li>
     </ul>
