--- a/Liquid-main/sections/announcement-bar.liquid
+++ b/Liquid-main/sections/announcement-bar.liquid
@@ -1,3 +1,4 @@
+{% # Section: announcement-bar %}
 {{ 'component-slideshow.css' | asset_url | stylesheet_tag }}
 {{ 'component-slider.css' | asset_url | stylesheet_tag }}
 
