--- a/Liquid-main/sections/collage.liquid
+++ b/Liquid-main/sections/collage.liquid
@@ -1,3 +1,4 @@
+{{% # Section: collage %}
 {{ 'collage.css' | asset_url | stylesheet_tag }}
 {{ 'component-card.css' | asset_url | stylesheet_tag }}
 {{ 'component-price.css' | asset_url | stylesheet_tag }}
